--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -11,13 +11,13 @@
         <!--Users-->
         <scene sceneID="eTy-Ei-EMH">
             <objects>
-                <tableViewController id="LCP-lz-8N9" sceneMemberID="viewController">
+                <tableViewController id="LCP-lz-8N9" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Pks-Fu-WFD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="69" id="UI1-qZ-hQ0">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="69" id="UI1-qZ-hQ0" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="69"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UI1-qZ-hQ0" id="jQX-tp-Ppy">
@@ -49,6 +49,8 @@
                                     <constraint firstAttribute="trailing" secondItem="wz6-lZ-ADg" secondAttribute="trailing" constant="20" id="VUP-8L-lac"/>
                                 </constraints>
                                 <connections>
+                                    <outlet property="iconImage" destination="33o-cG-sk3" id="p7F-9g-jLa"/>
+                                    <outlet property="nameLabel" destination="wz6-lZ-ADg" id="5cj-Cx-1vJ"/>
                                     <segue destination="b2x-OP-ym0" kind="show" id="eS3-nj-bSm"/>
                                 </connections>
                             </tableViewCell>
@@ -66,10 +68,10 @@
             </objects>
             <point key="canvasLocation" x="471.01449275362324" y="29.464285714285712"/>
         </scene>
-        <!--View Controller-->
+        <!--User Detail View Controller-->
         <scene sceneID="BFE-nV-qc5">
             <objects>
-                <viewController id="b2x-OP-ym0" sceneMemberID="viewController">
+                <viewController id="b2x-OP-ym0" customClass="UserDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="97F-hd-c8K">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -116,6 +118,12 @@
                         <viewLayoutGuide key="safeArea" id="ySK-j8-y4B"/>
                     </view>
                     <navigationItem key="navigationItem" id="UmC-ip-aG2"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="74l-mg-jIZ" id="7fW-sd-1Lk"/>
+                        <outlet property="largeImage" destination="9ZF-HP-2Wv" id="4Jg-2G-UNX"/>
+                        <outlet property="nameLabel" destination="1Ui-ib-sks" id="mxk-7t-1bB"/>
+                        <outlet property="phoneNumberLabel" destination="os3-ia-yHV" id="jxv-m5-khR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c96-gy-Eag" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
